# my-newsroom

./: .gitignore  .gitlab-ci.yml  CHANGELOG.adoc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ECOSYSTEM.scm  LICENSE.txt  MAINTAINERS.md  META.scm  README.adoc  README.md  ROADMAP.adoc  SECURITY.md  STATE.scm  claude.md  justfile  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: codeql.yml  demo.yml  generator-generic-ossf-slsa3-publish.yml  jekyll-gh-pages.yml  quality.yml  rust.yml  scorecard-enforcer.yml  scorecard.yml  wellknown-enforcement.yml
.machine_readable/: AGENTIC.scm  ECOSYSTEM.scm  META.scm  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm
.well-known/: ai.txt  humans.txt  security-researchers.txt  security.txt
docs/: MY-LANGUAGE-INDEX.md  NEWROOM-ROADMAP.md  RSR-COMPLIANCE.md
docs/dialects/: duet.md  ensemble.md  me.md  solo.md
docs/guides/: migration-guide.md  verification-guide.md
docs/research/: academic-papers.md  conference-materials.md
examples/: README.md
examples/duet/: verified_fusion.duet  verified_sort.duet
examples/ensemble/: bft_consensus.ens  simple_newsroom.ens
examples/solo/: belief_example.solo  hello_world.solo
solo-compiler/: Cargo.toml
solo-compiler/src/: lexer.rs  lib.rs  main.rs  token.rs
src/mynewsroom/: __init__.py
src/mynewsroom/dempster_shafer/: __init__.py  core.py
tests/unit/: test_dempster_shafer.py
